--- a/frontend/src/vercel.json
+++ b/frontend/src/vercel.json
@@ -1,1 +1,18 @@
-Why is my vercel project giving me an error 404 on refresh? 
+{
+  "version": 2,
+  "builds": [
+    {
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "/index.html"
+    }
+  ],
+ 
